// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core / Parameters / Layout Centered 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c16=""
    ng-reflect-text="Button"
  >
    <button
      _ngcontent-a-c16=""
    >
      Button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Core / Parameters / Layout Default 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c14=""
    ng-reflect-text="Button"
  >
    <button
      _ngcontent-a-c14=""
    >
      Button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Core / Parameters / Layout Fullscreen 1`] = `
<storybook-wrapper>
  <div
    style="background-color: yellow;"
  >
    <storybook-button-component
      _nghost-a-c15=""
      ng-reflect-text="Button"
      text="Button"
    >
      <button
        _ngcontent-a-c15=""
      >
        Button
      </button>
    </storybook-button-component>
  </div>
</storybook-wrapper>
`;

exports[`Storyshots Core / Parameters / Layout None 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c18=""
    ng-reflect-text="Button"
  >
    <button
      _ngcontent-a-c18=""
    >
      Button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Core / Parameters / Layout Padded 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c17=""
    ng-reflect-text="Button"
  >
    <button
      _ngcontent-a-c17=""
    >
      Button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
